fixing and polish