@@ -4,7 +4,9 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 
 public class SortingTest {
@@ -12,58 +14,58 @@ public class SortingTest {
 	@Test
 	public void insertionSortTest1() {
 
-		Integer[] input = {2,6,8,4,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(2,6,8,4,1));
 
 		Sorting.insertionSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(4), input[2]);
-		Assert.assertEquals(new Integer(6), input[3]);
-		Assert.assertEquals(new Integer(8), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(4), input.get(2));
+		Assert.assertEquals(Integer.valueOf(6), input.get(3));
+		Assert.assertEquals(Integer.valueOf(8), input.get(4));
 	}
 
 	@Test
 	public void insertionSortTest2() {
 
-		Integer[] input = {1,2,3,4,5};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,2,3,4,5));
 
 		Sorting.insertionSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(3), input[2]);
-		Assert.assertEquals(new Integer(4), input[3]);
-		Assert.assertEquals(new Integer(5), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(3), input.get(2));
+		Assert.assertEquals(Integer.valueOf(4), input.get(3));
+		Assert.assertEquals(Integer.valueOf(5), input.get(4));
 	}
 
 	@Test
 	public void insertionSortTest3() {
 
-		Integer[] input = {1,1,1,1,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,1,1,1,1));
 
 		Sorting.insertionSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(1), input[1]);
-		Assert.assertEquals(new Integer(1), input[2]);
-		Assert.assertEquals(new Integer(1), input[3]);
-		Assert.assertEquals(new Integer(1), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(1), input.get(1));
+		Assert.assertEquals(Integer.valueOf(1), input.get(2));
+		Assert.assertEquals(Integer.valueOf(1), input.get(3));
+		Assert.assertEquals(Integer.valueOf(1), input.get(4));
 	}
 
 	@Test
 	public void insertionSortTestPerformance() {
 
-		Integer[] input = new Integer[100000];
+		List<Integer> input = new ArrayList<>(100000);
 
 		for(int i = 0 ; i < 100000 ; i++) {
-			input[i] = ThreadLocalRandom.current().nextInt(1, 99999 + 1);
+			input.add(ThreadLocalRandom.current().nextInt(1, 99999 + 1));
 		}
 
 		Instant startTime = Instant.now();
@@ -72,65 +74,63 @@ public class SortingTest {
 
 		Instant endTime = Instant.now();
 		System.out.println("insertionSort " + (endTime.toEpochMilli() - startTime.toEpochMilli()));
-
 	}
-
 
 	@Test
 	public void heapSortTest1() {
 
-		Integer[] input = {2,6,8,4,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(2,6,8,4,1));
 
 		Sorting.heapsort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(4), input[2]);
-		Assert.assertEquals(new Integer(6), input[3]);
-		Assert.assertEquals(new Integer(8), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(4), input.get(2));
+		Assert.assertEquals(Integer.valueOf(6), input.get(3));
+		Assert.assertEquals(Integer.valueOf(8), input.get(4));
 	}
 
 	@Test
 	public void heapSortTest2() {
 
-		Integer[] input = {1,2,3,4,5};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,2,3,4,5));
 
 		Sorting.heapsort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(3), input[2]);
-		Assert.assertEquals(new Integer(4), input[3]);
-		Assert.assertEquals(new Integer(5), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(3), input.get(2));
+		Assert.assertEquals(Integer.valueOf(4), input.get(3));
+		Assert.assertEquals(Integer.valueOf(5), input.get(4));
 	}
 
 	@Test
 	public void heapSortTest3() {
 
-		Integer[] input = {1,1,1,1,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,1,1,1,1));
 
 		Sorting.heapsort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(1), input[1]);
-		Assert.assertEquals(new Integer(1), input[2]);
-		Assert.assertEquals(new Integer(1), input[3]);
-		Assert.assertEquals(new Integer(1), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(1), input.get(1));
+		Assert.assertEquals(Integer.valueOf(1), input.get(2));
+		Assert.assertEquals(Integer.valueOf(1), input.get(3));
+		Assert.assertEquals(Integer.valueOf(1), input.get(4));
 	}
 
 	@Test
 	public void heapSortTestPerformance() {
 
-		Integer[] input = new Integer[100000];
+		List<Integer> input = new ArrayList<>(100000);
 
 		for(int i = 0 ; i < 100000 ; i++) {
-			input[i] = ThreadLocalRandom.current().nextInt(1, 99999 + 1);
+			input.add(ThreadLocalRandom.current().nextInt(1, 99999 + 1));
 		}
 
 		Instant startTime = Instant.now();
@@ -139,65 +139,64 @@ public class SortingTest {
 
 		Instant endTime = Instant.now();
 		System.out.println("heapSort " + (endTime.toEpochMilli() - startTime.toEpochMilli()));
-
 	}
 
 
 	@Test
 	public void quickSortTest1() {
 
-		Integer[] input = {2,6,8,4,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(2,6,8,4,1));
 
 		Sorting.quickSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(4), input[2]);
-		Assert.assertEquals(new Integer(6), input[3]);
-		Assert.assertEquals(new Integer(8), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(4), input.get(2));
+		Assert.assertEquals(Integer.valueOf(6), input.get(3));
+		Assert.assertEquals(Integer.valueOf(8), input.get(4));
 	}
 
 	@Test
 	public void quickSortTest2() {
 
-		Integer[] input = {1,2,3,4,5};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,2,3,4,5));
 
 		Sorting.quickSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(3), input[2]);
-		Assert.assertEquals(new Integer(4), input[3]);
-		Assert.assertEquals(new Integer(5), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(3), input.get(2));
+		Assert.assertEquals(Integer.valueOf(4), input.get(3));
+		Assert.assertEquals(Integer.valueOf(5), input.get(4));
 	}
 
 	@Test
 	public void quickSortTest3() {
 
-		Integer[] input = {1,1,1,1,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,1,1,1,1));
 
 		Sorting.quickSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(1), input[1]);
-		Assert.assertEquals(new Integer(1), input[2]);
-		Assert.assertEquals(new Integer(1), input[3]);
-		Assert.assertEquals(new Integer(1), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(1), input.get(1));
+		Assert.assertEquals(Integer.valueOf(1), input.get(2));
+		Assert.assertEquals(Integer.valueOf(1), input.get(3));
+		Assert.assertEquals(Integer.valueOf(1), input.get(4));
 	}
 
 	@Test
 	public void quickSortTestPerformance() {
 
-		Integer[] input = new Integer[100000];
+		List<Integer> input = new ArrayList<>(100000);
 
 		for(int i = 0 ; i < 100000 ; i++) {
-			input[i] = ThreadLocalRandom.current().nextInt(1, 99999 + 1);
+			input.add(ThreadLocalRandom.current().nextInt(1, 99999 + 1));
 		}
 
 		Instant startTime = Instant.now();
@@ -212,58 +211,58 @@ public class SortingTest {
 	@Test
 	public void mergeSortTest1() {
 
-		Integer[] input = {2,6,8,4,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(2,6,8,4,1));
 
 		Sorting.mergeSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(4), input[2]);
-		Assert.assertEquals(new Integer(6), input[3]);
-		Assert.assertEquals(new Integer(8), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(4), input.get(2));
+		Assert.assertEquals(Integer.valueOf(6), input.get(3));
+		Assert.assertEquals(Integer.valueOf(8), input.get(4));
 	}
 
 	@Test
 	public void mergeSortTest2() {
 
-		Integer[] input = {1,2,3,4,5};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,2,3,4,5));
 
 		Sorting.mergeSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(3), input[2]);
-		Assert.assertEquals(new Integer(4), input[3]);
-		Assert.assertEquals(new Integer(5), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(3), input.get(2));
+		Assert.assertEquals(Integer.valueOf(4), input.get(3));
+		Assert.assertEquals(Integer.valueOf(5), input.get(4));
 	}
 
 	@Test
 	public void mergeSortTest3() {
 
-		Integer[] input = {1,1,1,1,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,1,1,1,1));
 
 		Sorting.mergeSort(input);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(1), input[1]);
-		Assert.assertEquals(new Integer(1), input[2]);
-		Assert.assertEquals(new Integer(1), input[3]);
-		Assert.assertEquals(new Integer(1), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(1), input.get(1));
+		Assert.assertEquals(Integer.valueOf(1), input.get(2));
+		Assert.assertEquals(Integer.valueOf(1), input.get(3));
+		Assert.assertEquals(Integer.valueOf(1), input.get(4));
 	}
 
 	@Test
 	public void mergeSortTestPerformance() {
 
-		Integer[] input = new Integer[100000];
+		List<Integer> input = new ArrayList<>(100000);
 
 		for(int i = 0 ; i < 100000 ; i++) {
-			input[i] = ThreadLocalRandom.current().nextInt(1, 99999 + 1);
+			input.add(ThreadLocalRandom.current().nextInt(1, 99999 + 1));
 		}
 
 		Instant startTime = Instant.now();
@@ -278,58 +277,58 @@ public class SortingTest {
 	@Test
 	public void countingSortTest1() {
 
-		Integer[] input = {2,6,8,4,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(2,6,8,4,1));
 
-		Sorting.countingSort(input,10);
+		Sorting.countingSort(input, 10);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(4), input[2]);
-		Assert.assertEquals(new Integer(6), input[3]);
-		Assert.assertEquals(new Integer(8), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(4), input.get(2));
+		Assert.assertEquals(Integer.valueOf(6), input.get(3));
+		Assert.assertEquals(Integer.valueOf(8), input.get(4));
 	}
 
 	@Test
 	public void countingSort2() {
 
-		Integer[] input = {1,2,3,4,5};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,2,3,4,5));
 
 		Sorting.countingSort(input, 10);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(2), input[1]);
-		Assert.assertEquals(new Integer(3), input[2]);
-		Assert.assertEquals(new Integer(4), input[3]);
-		Assert.assertEquals(new Integer(5), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(2), input.get(1));
+		Assert.assertEquals(Integer.valueOf(3), input.get(2));
+		Assert.assertEquals(Integer.valueOf(4), input.get(3));
+		Assert.assertEquals(Integer.valueOf(5), input.get(4));
 	}
 
 	@Test
 	public void countingSortTest3() {
 
-		Integer[] input = {1,1,1,1,1};
+		List<Integer> input = new ArrayList<>(Arrays.asList(1,1,1,1,1));
 
 		Sorting.countingSort(input, 2);
 
-		Assert.assertEquals(5, input.length);
+		Assert.assertEquals(5, input.size());
 
-		Assert.assertEquals(new Integer(1), input[0]);
-		Assert.assertEquals(new Integer(1), input[1]);
-		Assert.assertEquals(new Integer(1), input[2]);
-		Assert.assertEquals(new Integer(1), input[3]);
-		Assert.assertEquals(new Integer(1), input[4]);
+		Assert.assertEquals(Integer.valueOf(1), input.get(0));
+		Assert.assertEquals(Integer.valueOf(1), input.get(1));
+		Assert.assertEquals(Integer.valueOf(1), input.get(2));
+		Assert.assertEquals(Integer.valueOf(1), input.get(3));
+		Assert.assertEquals(Integer.valueOf(1), input.get(4));
 	}
 
 	@Test
 	public void countingSortTestPerformance() {
 
-		Integer[] input = new Integer[100000];
+		List<Integer> input = new ArrayList<>(100000);
 
 		for(int i = 0 ; i < 100000 ; i++) {
-			input[i] = ThreadLocalRandom.current().nextInt(1, 99999 + 1);
+			input.add(ThreadLocalRandom.current().nextInt(1, 99999 + 1));
 		}
 
 		Instant startTime = Instant.now();
